# buidling_AI_agents

./: .README.md.swp  .gitignore  README.md  Untitled.ipynb  binance.ipynb  evaluation_results_v1.csv  evaluation_results_v2.csv  index.ipynb  logging_utils.py  my_chunks_sections.json  pyproject.toml  requirements.txt
.ipynb_checkpoints/: agenttest-checkpoint.ipynb  binance-checkpoint.ipynb  evals-checkpoint.py  index-checkpoint.ipynb  logging_utils-checkpoint.py
app/: app.py  ingest.py  logs.py  main.py  search_agent.py  search_tools.py
eval/: evals.py  evaluation_results.csv
notebooks/: binance.ipynb  index.ipynb  logging_utils.py
