[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minsearch>=0.0.10",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pydantic-ai>=1.73.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
